--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,10 @@ TABLE OF CONTENTS
 /* -------------------------------------------------------
                      Global 
 -------------------------------------------------------- */
+.norm{
+	display: none;
+}
+
 body {
   font-family: 'Source Sans Pro', sans-serif;
   color: #111;
